# majjit

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: command_tree.rs  log_tree.rs  main.rs  model.rs  shell_out.rs  terminal.rs  update.rs  view.rs
