[package]
name = "jjdag"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.13.0"
ratatui = "0.30.0"
ratatui-textarea = "0.8.0"
regex = "1.12.3"
tempfile = "3.14.0"
